<resources>
    <string name="app_name">Questify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonFilter">Фильтрация</string>
    <string name="buttonSort">Сортировка</string>
    <string name="importButton">Импорт</string>
    <string name="addTaskButton">Добавить</string>
    <string name="cancelButton">Отмена</string>
    <string name="saveButton">Сохранить</string>
    <string name="taskNameButton">Название задачи</string>
    <string name="descriptionButton">Описание</string>
    <string name="deadlineButton">Дедлайн</string>
    <string name="projectName">Название нового проекта</string>
    <string name="resetFilterButton">Сбросить все фильтрации</string>
    <string name="showButton">Показать</string>
    <string name="doneButton">Выполнена</string>
    <string name="deleteTaskButton">Удалить задачу</string>
    <string name="tasksMenuItem">Задачи</string>
    <string name="calendarMenuItem">Календарь</string>
    <string name="shopMenuItem">Магазин</string>
    <string name="statisticsMenuItem">Статистика</string>
    <string name="petMenuItem">Главная</string>
    <string name="settingsButton">Настройки</string>
    <string name="deleteProgressButton">Сбросить прогресс</string>
    <string name="deleteCompletedButton">Удалить выполненные задачи</string>
    <string name="ExportTasksButton">Экспортировать задачи</string>
    <string name="status">Статус</string>
    <string name="hintStartDate">Выберите дату начала интервала</string>
    <string name="hintEndDate">Выберите дату окончания интервала</string>
    <string name="Projects">Проекты</string>
    <string-array name="sort_options">
        <item>Сортировка</item>
        <item>По дедлайну</item>
        <item>По приоритету</item>
        <item>По сложности</item>
        <item>По обновлению</item>
    </string-array>
    <string name="error_task_name_short">Название задачи должно состоять не менее чем из 3 символов</string>
    <string name="error_task_name_exists">Задача с таким названием уже существует</string>
    <string name="error_task_deadline_past">Дедлайн задачи должен быть не раньше даты, в которую создается задача</string>
    <string name="error_project_name_short">Название проекта должно состоять не менее чем из 3 символов</string>
    <string name="error_task_deadline_empty">Дедлайн не может быть пустым</string>
    <string name="error_os_closed">Не удалось открыть файл для записи</string>
    <string name="error_reading_file">Ошибка чтения файла</string>
    <string name="error_wrong_format">Неправильный формат</string>
    <string name="filter_priority">Приоритет</string>
    <string name="filter_difficulty">Сложность</string>
    <string name="filter_deadline">Дедлайн до (timestamp)</string>
    <string name="button_back">Назад</string>
    <string name="button_apply">Применить</string>
    <string name="button_reset">Сбросить</string>
    <string name="hint_deadline">Дедлайн (timestamp)</string>
    <string name="coins">%d</string>
    <string name="level">%d</string>
    <string name="pet_coins_to_next_level">%d</string>
    <string name="coins_label">Монеты</string>
    <string name="level_label">Уровень</string>
    <string name="to_next_level_label">До ур.</string>
    <string name="achievements_title">Достижения</string>
    <string name="pet_advice_button">Совет</string>
    <string name="ach_first_task">Первое задание</string>
    <string name="ach_five_tasks">Опытный</string>
    <string name="ach_twenty_tasks">Мастер</string>
    <string name="ach_level_5">Уровень 5</string>
    <string name="ach_coins_100">Богатство</string>
    <string name="project_tasks_count" formatted="false">Задач: %d | Выполнено: %d | Просрочено: %d</string>
    <string name="project_progress_percent">Прогресс: %d%%</string>
    <string name="project_add_task">+ Добавить задачу</string>
    <string name="task_deadline_prefix">Дедлайн: </string>
    <string name="task_overdue_suffix"> (Просрочено)</string>
    <string name="projects_title">Проекты</string>
    <string name="project_create_title">Создать проект</string>
    <string name="project_name_hint">Название проекта</string>
    <string name="project_color">Цвет проекта</string>
    <string name="project_color_picker_title">Выберите цвет</string>
    <string name="project_color_purple">Фиолетовый</string>
    <string name="project_color_red">Красный</string>
    <string name="project_color_green">Зеленый</string>
    <string name="project_color_yellow">Желтый</string>
    <string name="project_color_blue">Синий</string>
    <string name="project_color_pink">Розовый</string>
    <string name="project_color_orange">Оранжевый</string>
    <string name="project_color_burgundy">Бордовый</string>
    <string name="project_create">Создать</string>
    <string name="project_cancel">Отмена</string>
    <string name="project_save">Сохранить</string>
    <string name="project_edit">Редактировать</string>
    <string name="project_edit_color_only">Редактировать цвет</string>
    <string name="project_delete">Удалить</string>
    <string name="project_export">Экспорт</string>
    <string name="project_name_exists">Проект с таким названием уже существует</string>
    <string name="project_name_empty">Введите название проекта</string>
    <string name="project_name_too_short">Название должно быть не менее 3 символов</string>
    <string name="project_delete_title">Удаление проекта</string>
    <string name="project_delete_message" formatted="false">Удалить проект "%s"?\n\nВсе задачи этого проекта будут перенесены в проект "%s"</string>
    <string name="project_deleting">Удаление проекта…</string>
    <string name="project_deleted_success">Проект удален, задачи перенесены в стандартный проект</string>
    <string name="project_stats_loading">Загрузка…</string>
    <string name="project_stats_format" formatted="false">Задач: %d | Выполнено: %d</string>
    <string name="project_edit_color_title">Редактировать проект цвет</string>
    <string name="project_edit_title">Редактировать проект</string>
    <string name="project_edit_only_color_title">Редактировать проект (только цвет)</string>
    <string name="error_occurred">Возникла ошибка: %s</string>
    <string name="error_cannot_rename_default">Нельзя изменить название стандартного проекта</string>
    <string name="error_cannot_delete_default">Нельзя удалить стандартный проект</string>
    <string name="project_updated">Проект обновлен</string>
    <string name="filter_error_start_after_end">Начальная дата позже конечной</string>
    <string name="filter_all">Все</string>
    <string name="filter_project">Проект</string>
    <string name="filter_all_projects">Все проекты</string>
    <string name="priority_very_high">Очень высокий</string>
    <string name="priority_high">Высокий</string>
    <string name="priority_medium">Средний</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_very_low">Очень низкий</string>
    <string name="difficulty_very_difficult">Очень сложная</string>
    <string name="difficulty_difficult">Сложная</string>
    <string name="difficulty_medium">Средняя</string>
    <string name="difficulty_easy">Легкая</string>
    <string name="difficulty_very_easy">Очень легкая</string>
    <string name="task_status_all">Все</string>
    <string name="task_status_done">Выполненные</string>
    <string name="task_status_not_done">Не выполненные</string>
    <string name="choose_project">Выберите проект</string>
    <string name="subtasks_header">Подзадачи</string>
    <string name="subtask_add_hint">Добавить подзадачу</string>
    <string name="subtask_edit_title">Изменить подзадачу</string>
    <string name="settings_section_appearance">Внешний вид</string>
    <string name="settings_section_progress">Прогресс</string>
    <string name="settings_section_projects">Проекты</string>
    <string name="settings_section_export">Экспорт</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_theme_dark">Тёмная</string>
    <string name="settings_theme_light">Светлая</string>
    <string name="settings_language">Язык</string>
    <string name="settings_delete_project_section">Удалить проект</string>
    <string name="settings_delete_project_button">Удалить выбранный проект</string>
    <string name="settings_delete_project_title">Удаление проекта</string>
    <string name="settings_delete_project_confirm" formatted="false">Удалить проект "%s"? Задачи будут перенесены в стандартный проект.</string>
    <string name="settings_select_project">Выберите проект</string>
    <string name="settings_reset_progress">Сброс прогресса</string>
    <string name="settings_reset_progress_confirm">Вы уверены, что хотите удалить весь прогресс?</string>
    <string name="settings_delete_completed">Удаление задач</string>
    <string name="settings_delete_completed_confirm">Удалить все выполненные задачи?</string>
    <string name="settings_export_tasks">Экспортировать задачи</string>
    <string name="settings_export_deadlines">Экспорт дедлайнов</string>
    <string name="settings_export_statistics_json">Экспорт статистики JSON</string>
    <string name="settings_export_statistics_png">Экспорт статистики PNG</string>
    <string name="settings_yes">Да</string>
    <string name="settings_no">Отмена</string>
    <string name="settings_section_account">Аккаунт</string>
    <string name="settings_account_email">Аккаунт: %s</string>
    <string name="settings_account_guest">Гостевой вход</string>
    <string name="settings_reset_password">Сбросить пароль (по email)</string>
    <string name="settings_reset_password_sent">Письмо для сброса пароля отправлено</string>
    <string name="settings_reset_password_error">Ошибка: %s</string>
    <string name="settings_sign_out">Выйти из аккаунта</string>
    <string name="settings_sign_out_confirm">Выйти из аккаунта? Несинхронизированные данные могут быть потеряны.</string>
    <string name="shop_buy">Купить за %d монет</string>
    <string name="shop_wear">Надеть</string>
    <string name="shop_wearing">Надето</string>
    <string name="shop_already_bought">Уже куплено</string>
    <string name="shop_insufficient_coins">Недостаточно монет</string>
    <string name="catInClothes">Питомец в одежде</string>
    <string name="left">Влево</string>
    <string name="right">Вправо</string>
    <string name="shop_buy_format">Купить за %d монет</string>
    <string name="shop_price_format">Цена: %d монет</string>
    <string name="shop_price_insufficient_format">Цена: %d монет (недостаточно)</string>
    <string name="project_color_label">Цвет проекта</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="sort_deadline_asc">Дедлайн: ближайшие первые</string>
    <string name="sort_deadline_desc">Дедлайн: дальние первые</string>
    <string name="sort_priority_asc">Приоритет: высокий первый</string>
    <string name="sort_priority_desc">Приоритет: низкий первый</string>
    <string name="sort_difficulty_asc">Сложность: сложные первые</string>
    <string name="sort_difficulty_desc">Сложность: лёгкие первые</string>
    <string name="sort_apply">Применить</string>
    <string name="stats_title">Статистика задач</string>
    <string name="stats_total">Создано</string>
    <string name="stats_completed">Выполнено</string>
    <string name="stats_overdue">Просрочено</string>
    <string name="stats_chart_title">Распределение по проектам</string>
    <string name="stats_export_format">Формат экспорта</string>
    <string name="stats_export_png">PNG</string>
    <string name="stats_export_json">JSON</string>
    <string name="stats_export_button">Экспортировать</string>
    <string name="stats_advice_title">Совет по продуктивности</string>
    <string name="stats_advice_loading">Формируем совет…</string>
    <string name="stats_advice_export_button">Экспортировать изображение</string>
    <string name="zero">0</string>
</resources>