<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/statisticsMenuItem" />

    <item
        android:id="@+id/nav_projects"
        android:icon="@drawable/ic_nav_projects"
        android:title="@string/Projects" />

    <item
        android:id="@+id/nav_pet"
        android:icon="@drawable/ic_nav_pet"
        android:title="@string/petMenuItem" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendarMenuItem" />

    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_nav_tasks"
        android:title="@string/tasksMenuItem" />

</menu>