<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <Button
        android:id="@+id/buttonResetProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteProgressButton" />

    <Button
        android:id="@+id/buttonDeleteCompleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/deleteCompletedButton" />

    <Button
        android:id="@+id/buttonExportTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ExportTasksButton" />

</LinearLayout>
